Fixing btn visibility
Try bootstrap-overrides trick, as per
http://stackoverflow.com/questions/20721248/best-way-to-override-bootstrap-css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body{
 	background: #333333; !important
 }
 
-btn {
+#bootstrap-overrides btn {
 	/* color: #2B4F3E; */
 	color: #333333;
 	font-weight: bold;
